fix text not fitting the lil bubble

--- a/BurntBlog/static/style.css
+++ b/BurntBlog/static/style.css
@@ -73,7 +73,7 @@ a {
     border-radius:10px;
 }
 
-#post-content, #post-content * {
+#post-content {
     width: 75%;
     padding-inline: 10px;
 
